Renamed Icons and matched icons to weather
-Added comments to certain areas

-Renamed all icons to match with Accuweather API naming scheme

-Implemented icons matching with their corresponding weather pattern

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-day-0" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-day-0" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-day-0">-</h2>
                 </section>
                 <section id="weather-precip-day-0">
@@ -31,7 +31,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-night-0" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-night-0" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-night-0">-</h2>
                 </section>
                 <section id="weather-precip-night-0">
@@ -50,7 +50,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-day-1" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-day-1" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-day-1">-</h2>
                 </section>
                 <section id="weather-precip-day-1">
@@ -59,7 +59,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-night-1" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-night-1" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-night-1">-</h2>
                 </section>
                 <section id="weather-precip-night-1">
@@ -78,7 +78,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-day-2" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-day-2" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-day-2">-</h2>
                 </section>
                 <section id="weather-precip-day-2">
@@ -87,7 +87,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-night-2" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-night-2" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-night-2">-</h2>
                 </section>
                 <section id="weather-precip-night-2">
@@ -106,7 +106,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-day-3" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-day-3" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-day-3">-</h2>
                 </section>
                 <section id="weather-precip-day-3">
@@ -115,7 +115,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-night-3" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-night-3" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-night-3">-</h2>
                 </section>
                 <section id="weather-precip-night-3">
@@ -134,7 +134,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-day-4" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-day-4" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-day-4">-</h2>
                 </section>
                 <section id="weather-precip-day-4">
@@ -143,7 +143,7 @@
             </section>
             <section id="weather-section">
                 <section id="weather-info">
-                    <img class="icon" id="icon-night-4" src="icons/sunny.svg" alt="Weather" width="60px" height="60px">
+                    <img class="icon" id="icon-night-4" src="icons/0.svg" alt="Weather" width="60px" height="60px">
                     <h2 class="text" id="weather-type-night-4">-</h2>
                 </section>
                 <section id="weather-precip-night-4">
